# itk_filtering

./: .gitignore  CMakeLists.txt  README.md  T1_1_MeanFilter.cxx  T1_2_MedianFilter.cxx  T1_3_GradientMagnitudeImageFilter.cxx  T1_4_CurvatureFlowImageFilter.cxx  T1_5_OtsuThresholdImageFilter.cxx
Images/: MRBrainT1.nrrd
